# coursework-2

./: README.md  main.py  pyproject.toml
src/: answers_vacancy.py  interaction_to_json_file.py  interaction_with_api.py  vacancy.py
tests/: test_answers_vacancy.py  test_interaction_to_json.py  test_interaction_with_api.py  test_vacancy.py
