[tool.poetry]
name = "coursework-2"
version = "0.1.0"
description = ""
authors = ["Илья Гирько <Gggggirr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
mypy = "^1.11.2"
isort = "^5.13.2"
flake8 = "^7.1.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"


[tool.black]
line-length = 119
exclude = """(/(|/.git)/)"""


[tool.isort]
line_length = 119